# timeset

./: .gitignore  LICENSE  README.md  publish.sh  setup.cfg  test.sh  tests.py  timeset.py
src/timeset/: __init__.py  awareness.py  continuous.py  date_range.py  daterange.py  interval.py  month.py  tests.py  timerange.py  timeset.py  utils.py
