[metadata]
name = timeset
version = 0.13
author = Eerik Sven Puudist
description = A datastructure for working with overlapping time periods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eeriksp/timeset
project_urls =
    Bug Tracker = https://github.com/eeriksp/timeset/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
